styles.css
* {
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #4590ce;
  --secondary-color: #e3e8ef;
  --card-color: #e7b64a;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  height: 100vh;
  width: 100vw;
}

li {
  list-style-type: none;
}

li:not(.sidebar ul li) {
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
  padding: 1rem;
}

.container {
  background-color: var(--secondary-color);

  height: inherit;
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: auto;
  grid-template-areas: "sidebar header" "sidebar main";
}

.logo {
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 2fr;
}

.logo > svg {
  width: 50px;
  place-self: center;
}

.sidebar {
  grid-area: sidebar;
  padding: 1rem;

  display: flex;
  flex-direction: column;
  gap: 2.5rem;

  background-color: var(--primary-color);
  color: white;
}

.sidebar > ul {
  display: flex;
  gap: 1.5rem;
  flex-direction: column;
  font-weight: 600;
}

.sidebar > ul > li {
  display: grid;
  align-items: center;

  grid-template-columns: 1fr 2fr;
}

.sidebar > ul > li > svg {
  width: 24px;
  justify-self: center;
  align-self: center;
}

/* header start */
.header {
  background-color: white;
  padding: 1.5rem;
  grid-area: header;
  display: grid;
  gap: 2rem;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: auto;
  grid-template-areas: "header-search header-user-setting" "header-user-greeting header-shortcuts";
  box-shadow: rgba(0, 0, 0, 0.205) 0 2.4px 4.2px;
}

.header img {
  border-radius: 100%;
  width: 3.125rem;
  height: 3.125rem;
}

.user-settings {
  grid-area: header-user-setting;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 1rem;
}

.user-settings span {
  font-weight: 700;
}

.user-greeting {
  grid-area: header-user-greeting;
  display: flex;
  gap: 1rem;
  align-items: center;
}

.user-greeting img {
  width: 4rem;
  height: 4rem;
}

.user-greeting div {
  font-size: 0.75rem;
  font-weight: 600;
}

.shortcuts {
  grid-area: header-shortcuts;

  display: grid;
  grid-template-columns: repeat(3, 1fr);

  gap: 1rem;
}

.shortcuts button {
  align-self: center;
  height: 40px;
  padding: 0.5rem 1rem;
  border-radius: 1.25rem;
  border: none;
  font-weight: 600;
  color: white;
  background-color: var(--primary-color);
}

.search {
  grid-area: header-search;
  display: flex;
  align-items: center;

  gap: 1rem;
}

.header svg,
.main-content svg {
  width: 20px;
}

.search input {
  background-color: var(--secondary-color);
  border: none;
  height: 1.5rem;
  border-radius: 1rem;
  flex: 1;
}

/* main start */
.main-content {
  padding: 2rem 1.5rem 4rem;
  grid-area: main;

  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-areas: "project-list announcements-trending";
  gap: 1.5rem;
}

.main-content h4 {
  margin-bottom: 0.75rem;
}

.project-list {
  display: flex;
  flex-direction: column;

  grid-area: project-list;
}

.project-list ul {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(3, 1fr);
  gap: 1.5rem;
  flex: 1;
  line-height: 1.4;
}

.project-list > ul > li {
  border-radius: 0.5rem;
  border-left: 0.5rem solid var(--card-color);
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.project-list > ul > li > h5 {
  font-size: 1rem;
}

.project-list > ul > li > p {
  color: gray;
  flex: 1;
}

.project-list > ul > li > div {
  display: flex;
  justify-content: end;
  gap: 1rem;
}

.announcements-trending {
  grid-area: announcements-trending;
  display: grid;
  gap: 2rem;
}

.announcements {
  display: flex;
  flex-direction: column;
}

.announcements > ul {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(3, 1fr);
  border-radius: 0.5rem;
  overflow: hidden;
  flex: 1;
}

.announcements h6 {
  font-size: 0.8rem;
}

.announcements p {
  font-size: 0.75rem;
  color: gray;
}

.announcements > ul > li:not(:last-child) {
  border-bottom: 1px solid lightgray;
}

.trending {
  display: flex;
  flex-direction: column;
}

.trending ul {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, 1fr);
  border-radius: 0.5rem;
  overflow: hidden;
  flex: 1;
}

.trending li {
  display: flex;
  gap: 1rem;
}

.trending img {
  border-radius: 100%;
  width: 3.125rem;
  height: 3.125rem;
}

.trending .tag {
  font-size: 0.9rem;
}

.trending .title {
  color: gray;
  font-size: 0.75rem;
}

